header video & input fix on safari

--- a/src/sass/Blog.scss
+++ b/src/sass/Blog.scss
@@ -27,8 +27,8 @@
       margin-left: 2rem;
     }
     @include maxw(483) {
-      // flex-direction: column;
-      // min-width: calc(100% - 2rem);
+      flex-basis: 100%;
+      min-width: 4rem;
     }
 
     &-image-container {
@@ -38,6 +38,9 @@
       @include maxw(483) {
         flex-basis: 40%;
         min-width: 140px;
+      }
+      @include maxw(430) {
+        min-width: 0px;
       }
     }
 
@@ -55,18 +58,28 @@
         height: 120px;
         width: 165px;
       }
+      @include maxw(430) {
+        height: 80px;
+        width: 110px;
+      }
     }
 
     &-content {
       flex-basis: 60%;
       padding: 2rem;
       position: relative;
+      @include maxw(430) {
+        flex-basis: 80%;
+      }
     }
 
     &-title {
       text-align: center;
       margin: 0;
       font-size: 2rem;
+      @include maxw(483) {
+        font-size: 1.8rem;
+      }
     }
 
     &-excerpt {
